[gd_scene load_steps=21 format=3 uid="uid://3vu5es281gdr"]

[ext_resource type="Script" path="res://Menus/Menu.gd" id="1_4bpgx"]
[ext_resource type="AudioStream" uid="uid://b5ti06upyrm7w" path="res://Menus/ButtonClick.wav" id="2_1wkwq"]
[ext_resource type="Texture2D" uid="uid://d4e42id6l1088" path="res://Particles/SmokePuff3_sprite.png" id="2_8nyae"]
[ext_resource type="FontFile" uid="uid://bf7d23fk2q6gh" path="res://SuperPlayfulFont.ttf" id="2_g2hoq"]
[ext_resource type="Texture2D" uid="uid://bcblpc6qc6xbj" path="res://Menus/Idle@2x.png" id="3_07cnm"]
[ext_resource type="Texture2D" uid="uid://bqsxlgtwo5hgp" path="res://Particles/Explosion2_spritesheet.png" id="3_jes6r"]
[ext_resource type="Texture2D" uid="uid://ceymfa734ouv1" path="res://Particles/Explosion1_spritesheet.png" id="4_gpfkg"]
[ext_resource type="Texture2D" uid="uid://cfqnomwvhydir" path="res://Menus/Click@2x.png" id="4_mp6my"]

[sub_resource type="Theme" id="Theme_jtkui"]
default_font_size = 50

[sub_resource type="Gradient" id="Gradient_yawbu"]
colors = PackedColorArray(0.972549, 0.709804, 0, 1, 0.988235, 0.917647, 0.733333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iki1w"]
gradient = SubResource("Gradient_yawbu")
fill_from = Vector2(1, 0.376147)
fill_to = Vector2(1, 0.775229)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ij8g2"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
angle_min = -360.0
angle_max = 360.0
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -200.0
angular_velocity_max = 200.0
radial_velocity_min = 100.0
radial_velocity_max = 110.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rwdyt"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 6
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qv1n0"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(300, 500, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.5
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hnv4r"]
content_margin_left = 11.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 24.0
texture = ExtResource("3_07cnm")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w0frs"]
content_margin_left = 11.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 24.0
texture = ExtResource("3_07cnm")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rsa5q"]
content_margin_left = 11.0
content_margin_top = 6.0
content_margin_right = 10.0
content_margin_bottom = 8.0
texture = ExtResource("4_mp6my")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ta2kj"]
content_margin_left = 11.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 24.0
texture = ExtResource("3_07cnm")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_co6b4"]
content_margin_left = 11.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 24.0
texture = ExtResource("3_07cnm")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1437b"]
content_margin_left = 11.0
content_margin_top = 6.0
content_margin_right = 10.0
content_margin_bottom = 8.0
texture = ExtResource("4_mp6my")
texture_margin_left = 11.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 24.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -533.0
offset_right = -300.0
offset_bottom = -533.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jtkui")
script = ExtResource("1_4bpgx")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1014.0
offset_top = -1240.0
offset_right = 1770.0
offset_bottom = 1706.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_iki1w")

[node name="PlaySmoke2" type="GPUParticles2D" parent="."]
position = Vector2(413, 551)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ij8g2")
texture = ExtResource("2_8nyae")
lifetime = 0.2
one_shot = true

[node name="ExitSmoke1" type="GPUParticles2D" parent="."]
position = Vector2(182, 669)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ij8g2")
texture = ExtResource("2_8nyae")
lifetime = 0.2
one_shot = true

[node name="ExitSmoke2" type="GPUParticles2D" parent="."]
position = Vector2(413, 663)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ij8g2")
texture = ExtResource("2_8nyae")
lifetime = 0.2
one_shot = true

[node name="PlaySmoke1" type="GPUParticles2D" parent="."]
position = Vector2(184, 553)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ij8g2")
texture = ExtResource("2_8nyae")
lifetime = 0.2
one_shot = true

[node name="Explosions" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rwdyt")
position = Vector2(303, 511)
amount = 2
process_material = SubResource("ParticleProcessMaterial_qv1n0")
texture = ExtResource("3_jes6r")
explosiveness = 0.2
fixed_fps = 60

[node name="Explosions2" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rwdyt")
position = Vector2(303, 511)
amount = 2
process_material = SubResource("ParticleProcessMaterial_qv1n0")
texture = ExtResource("4_gpfkg")
explosiveness = 0.2
fixed_fps = 60

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 1066.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(345, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0.262745, 0.972549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_g2hoq")
text = "Infinite
Tic-Tac-Toe"
horizontal_alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_g2hoq")
theme_override_styles/normal = SubResource("StyleBoxTexture_hnv4r")
theme_override_styles/hover = SubResource("StyleBoxTexture_w0frs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rsa5q")
text = "Play"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_g2hoq")
theme_override_styles/normal = SubResource("StyleBoxTexture_ta2kj")
theme_override_styles/hover = SubResource("StyleBoxTexture_co6b4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1437b")
text = "Exit
"

[node name="Credits" type="Button" parent="."]
custom_minimum_size = Vector2(250, 85)
layout_mode = 2
offset_left = 240.0
offset_top = 776.0
offset_right = 490.0
offset_bottom = 876.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_g2hoq")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_hnv4r")
theme_override_styles/hover = SubResource("StyleBoxTexture_w0frs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rsa5q")
text = "Credits"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1wkwq")

[connection signal="button_down" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
